Fixed y= vertical alignment

--- a/graphwar/style.css
+++ b/graphwar/style.css
@@ -21,5 +21,5 @@ canvas {
 }
 
 .textfield * {
-    vertical-align: middle;
+    vertical-align: top;
 }
